// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar component when default props are provided should render correctly 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation2"
/>
`;

exports[`AppBar component when elevation is zero 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation0"
/>
`;
